modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-echo “Hello World” 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>小陌</title>
+</head>
+<body>
+    <h1>欢迎来到小陌的世界</h1>
+    <p>这是一个简单的HTML页面示例。</p>
+    <p>测试网页OK</p>
+    <script>
+        console.log("页面加载完成");
+    </script>
+    
+</body>
+</html>
