--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>欢迎来到小陌的世界</h1>
     <p>这是一个简单的HTML页面示例。</p>
     <p>测试网页OK</p>
+    <h1>免费下载字体的网站</h1>
+    <a href="https://www.webfontfree.com/">webfontfree字体网站</a>
+    <a href="https://www.zitijia.com/">字体家字体网站</a>
     <script>
         console.log("页面加载完成");
     </script>
