--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小陌</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <title>呆</title>
+    <link rel="shortcut icon" href="wx-tx.jpg" type="image">
     <link rel="stylesheet" href="xiaomo.css">
+     
 </head>
 <body>
-    <h1>欢迎来到小陌的世界</h1>
-    <p>这是一个简单的HTML页面示例。</p>
-    <p>测试网页OK</p>
+    <body>
+    <div class="div1">
+        <h1>小陌</h1>
+        <p>小陌是一个基于HTML、CSS和JavaScript的个人网站模板，旨在提供一个简洁、美观的个人展示平台。</p>
+        <p>该模板使用了现代的Web技术，支持响应式设计，能够在各种设备上良好显示。</p>
+        <p>欢迎使用和修改这个模板来创建你自己的个人网站！</p>
+
+    </div>
+    </body>
     <h1>免费下载字体的网站</h1>
-    <a href="https://www.webfontfree.com/">webfontfree字体网站</a><br>
-    <a href="https://www.zitijia.com/">字体家字体网站</a><br>
-    <script>
-        console.log("页面加载完成");
-    </script>
-    
+    <a href="https://www.webfontfree.com/" target="_blank">webfontfree字体网站</a><br>
+    <a href="https://www.zitijia.com/" target="_blank">字体家字体网站</a><br>
+
 </body>
 </html>
