--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>呆</title>
-    <link rel="shortcut icon" href="wx-tx.jpg" type="image">
+    <link rel="shortcut icon" href="IMG/wx-tx.png" type="image/x-icon">
     <link rel="stylesheet" href="xiaomo.css">
      
 </head>
