--- a/word.html
+++ b/word.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background-color: rgba(244, 249, 248, 0.994);">
     <div style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 9999;" id="overlay"></div>
 
     </div>
@@ -17,6 +17,16 @@
             <li><a href="https://www.webfontfree.com/"  style="font-weight: bold; color: black;">webfontfree字体网站</a></li>
             <li><a href="https://www.zitijia.com/" style="font-weight: bold; color: black;">字体家</a></li>
             <li><a href="https://docs.qq.com/sheet/DSW9td0RsV3JsbHBH?tab=vmk90e" style="font-weight: bold; color: black;">软件目录</a></li>
+        </ul>
+    </div>
+
+    <div style="width: 80%; height: auto; background-color: rgba(228, 245, 220, 0.736); border-radius: 20px; padding: 20px;margin-top: 40px;margin-left: auto;margin-right: auto;">
+        <h1 style="text-align: center;">常用词汇</h1>
+        <ul>
+            <li><a href="#maobing.html" style="font-weight: bold; color: black;">半斤</a></li>
+            <li><a href="#maobing.html" style="font-weight: bold; color: black;">八两</a></li>
+            <li><a href="#maobing.html" style="font-weight: bold; color: black;">滚滚</a></li>
+            <li><a href="#maobing.html" style="font-weight: bold; color: black;">等等</a></li>
         </ul>
     </div>
 
