--- a/word.html
+++ b/word.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>小陌个人网站</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-color: rgba(244, 249, 248, 0.994);">
