--- a/maobing.html
+++ b/maobing.html
@@ -7,18 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- From Uiverse.io by musashi-13 --> 
-    <div class="container">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+
+    <div class="cards">
+        <div class="card red" style="margin-left: auto;margin-right: auto;">
+            <p class="tip">Hover Me</p>
+            <p class="second-text">Lorem Ipsum</p>
+        </div>
+        <div class="card blue"style="margin-left: auto;margin-right: auto;">
+            <p class="tip">Hover Me</p>
+            <p class="second-text">Lorem Ipsum</p>
+        </div>
+        <div class="card green"style="margin-left: auto;margin-right: auto;">
+            <p class="tip">Hover Me</p>
+            <p class="second-text">Lorem Ipsum</p>
+        </div>
     </div>
-
-
     
 </body>
 </html>
