--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
     </div> -->
     <!-- From Uiverse.io by csozidev --> 
-<div class="card">
+<!-- <div class="card">
   <div class="top">
   <div class="pfp">
     <div class="playing">
@@ -155,7 +155,21 @@
   </div>
   <p class="timetext time_now">1:31</p>
   <p class="timetext time_full">3:46</p>
-</div>
+</div> -->
+    <div class="cards">
+        <div class="card red" style="margin-left: auto;margin-right: auto;">
+            <p class="tip">Hover Me</p>
+            <p class="second-text">Lorem Ipsum</p>
+        </div>
+        <div class="card blue"style="margin-left: auto;margin-right: auto;">
+            <p class="tip">Hover Me</p>
+            <p class="second-text">Lorem Ipsum</p>
+        </div>
+        <div class="card green"style="margin-left: auto;margin-right: auto;">
+            <p class="tip">Hover Me</p>
+            <p class="second-text">Lorem Ipsum</p>
+        </div>
+    </div>
 
 
 </body>
